--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
