--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "devDependencies": {
         "@types/node": "^12.12.21",
         "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.10",
+        "objects-to-csv": "^1.3.6",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.6"
     }
 }
