--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -8,22 +8,22 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dnd": "^14.0.5",
-    "react-dnd-html5-backend": "^14.1.0",
-    "react-dom": "^17.0.2",
-    "twilio": "^3.73.1"
+    "next": "^13.2.4",
+    "qrcode-terminal": "^0.12.0",
+    "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "twilio": "^3.73.1",
+    "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "postcss-preset-env": "^7.2.3",
-    "tailwindcss": "^3.0.18",
-    "typescript": "^4.5.5"
+    "postcss-preset-env": "^8.3.0",
+    "tailwindcss": "^3.0.18"
   }
 }
