--- a/local/src/whatsapp/package.json
+++ b/local/src/whatsapp/package.json
@@ -11,20 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "qrcode": "^1.5.1",
-    "qrcode-terminal": "^0.12.0",
+    "prompt-sync": "^4.2.0",
     "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "@types/qrcode": "^1.5.0",
-    "@types/qrcode-terminal": "^0.12.0",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
 }
