--- a/local/src/whatsapp/package.json
+++ b/local/src/whatsapp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "build-dev": "xcopy /y birthdays.csv dist\\birthdays.csv && tsc"
   },
   "author": "",
   "license": "ISC",
@@ -20,8 +20,6 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "ts-node": "^10.9.1"
   }
 }
