--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "cheerio": "^1.0.0-rc.10",
         "objects-to-csv": "^1.3.6",
+        "pptxgenjs": "^3.12.0",
         "request": "^2.88.2",
         "request-promise": "^4.2.6"
     }
