--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "typescript": "^5.0.3"
     },
     "dependencies": {
+        "@aws-sdk/client-cost-explorer": "^3.359.0",
         "cheerio": "^1.0.0-rc.10",
+        "dotenv": "^16.3.1",
         "objects-to-csv": "^1.3.6",
         "pptxgenjs": "^3.12.0",
         "request": "^2.88.2",
