--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -7,23 +7,27 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "axios": "^0.25.0",
-    "next": "^13.2.4",
+    "axios": "^1.6.1",
+    "nanoid": "^5.0.3",
+    "next": "^14.0.2",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "twilio": "^3.73.1",
-    "whatsapp-web.js": "^1.19.5"
+    "reactflow": "^11.10.1",
+    "twilio": "^4.19.0",
+    "twind": "^0.16.19",
+    "whatsapp-web.js": "^1.23.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.1",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "postcss-preset-env": "^8.3.0",
-    "tailwindcss": "^3.0.18"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "postcss-preset-env": "^9.3.0",
+    "tailwindcss": "^3.3.5"
   }
 }
