--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {},
     "devDependencies": {
+        "@gradio/client": "^0.9.2",
         "@types/node": "^18.15.11",
         "typescript": "^5.0.3"
     },
