--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-preset-env": "^9.3.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^4.9.5"
   }
 }
