--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "private": true,
     "scripts": {},
     "devDependencies": {
-        "@types/node": "^18.15.11",
-        "typescript": "^5.3.3"
+        "@types/node": "^18.15.11"
     },
     "dependencies": {
         "@aws-sdk/client-cost-explorer": "^3.359.0",
